animation_responsive.css
@keyframes buy_now_effect{
    0%{
        background-color: white;
        color: black;
    }
    50%{
        background-color: red;
        color: white;
    }
    100%{
        background-color: white;
        color: black;
    }
}
@media only screen and (min-width: 768px)
{

    /* header start */
    .logo{
        margin-left: 10px;
    }
    .navbar ul{
        margin-left: 10px;
    }
    .navbar ul li{
        margin: 15px 8px;
    }
    .navbar ul li a{
        font-size:13px;
    }
    .dropdown_menu ul{
    margin-left: -80px;
    justify-content: center;
    }
    .dropdown_menu ul li{
        width: 90px;
        margin-left: -10px;
    }
     /* header end */

     /* part one start */
     .part_one{
        width: 100%;
        height: 500px;
        display: flex;
        justify-content: space-between;
    }
     #writting_part,#img_part{
        width: 50%;
    }
    #writting_part{
        box-sizing: border-box;
        margin-left: 10px;
        padding: 5px;
       }
       .PHILIP_GILBERT{
        font-size: 40px;
    }
    .THIS_IS_ME{
        font-weight: 500;
        font-size: 20px;
    }
    .para{
        font-size: 15px;
    }
    .discoverme{
        padding: 10px 10px;
        margin-top: 20px;
    }
    #img_part img{
        height: 400px;
    }
    /* part one end */

    /* part two start */
    
    .part_two_img{
       margin-top: 60px;
       margin-left: -40px;
    }
    .part_two_img img{
        height: 300px;
        
    }
    .part_two_writting{
        margin-top: -45px;
        }
    .ABOUT_ME{
         font-weight: 500;
        font-size: 20px;
    }
    .PERSONAL_DETAILS{
        font-size: 30px;
    }
    .para2{
        font-size: 15px;
    }
    .viewfulldetails{
        padding: 10px 10px;
        margin-top: 20px;
    }
    /* part two end */

    /* part three start */

    .services{
        grid-gap:8px;
        margin-left: 40px;
        margin-top: -15px;
        grid-template-rows: 0.4fr repeat(2,0.5fr);
    }
    #s1,#s2,#s3,#s4,#s5,#s6,#s7{
        align-items: center;
        text-align: center;
        margin: 5px;
        padding: 5px;
    }
    .My_Offered_Services{
        font-size: 35px;
        color: #222222;
    }
    .My_offered_services_texts{
        color: #838180;
        font-size: 15px;
    }
    .logoshead{
        font-weight: 600;
        font-size: 20px;
    }

    /* part three end */

    /* part five start */

    .six_pic{
       width: 100%;
       height: 1500px;
       margin-top: 5px;
       margin-left: -5px;
       grid-template-rows: 150px repeat(3,540px);
       grid-template-columns:repeat(2,1fr);
       }   
    .pic_txt{
        grid-row: 1/2;
        grid-column: 1/3;
    }
    .container_one{
        grid-row:2/3;
        grid-column: 1/2;
    }
    .container_two{
        grid-row:2/3;
        grid-column: 2/3;
    }
    .container_three{
        grid-row:4/5;
        grid-column: 1/2;
        margin-top: -490px;
       
    }
    .container_four{
        grid-row:3/4;
        grid-column: 1/2;
        margin-top: -250px;
    }
    .container_five{
        grid-row:3/4;
        grid-column: 2/3;
        margin-top: -250px;
    }
    .container_six{
        grid-row:4/5;
        grid-column: 2/3;
        margin-top: -490px;
    }
    .Our_Latest_Featured_Projects{
        font-size: 35px;
        margin-top: 80px;
    }
    .overlay{
        box-sizing: border-box;
        /* border: 1px solid black; */
        height: 342px;
        width: 343px;
        /* position: absolute; */
        margin-top: -345px;
        margin-left: 11px;
        border-radius:6px;
        /* background-color: aqua; */
    }
   
    /* part five end */




}

